Fix #3 - Custom Scrollbar

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Roboto Condensed";
-    color: white;
+    color: #FFF;
     background-color: black;
 }
 
@@ -12,9 +12,9 @@ nav {
     top: 30%;
 
     background-color: #000!important;
-    border-right: white 2.5rem solid;
-    border-bottom: white 3px solid;
-    border-top: white 3px solid;
+    border-right: #FFF 2.5rem solid;
+    border-bottom: #FFF 3px solid;
+    border-top: #FFF 3px solid;
     overflow-x: hidden;
 
     /* Text */
@@ -29,7 +29,7 @@ nav .nav-item {
 
 nav:hover {
     width: 12%;
-    border-right: white 3px solid;
+    border-right: #FFF 3px solid;
     transition: all 0.3s;
 }
 
@@ -58,7 +58,7 @@ nav a > img:hover {
 
     nav .nav-item {
         padding: 15px 0;
-        border-bottom: white 3px solid;
+        border-bottom: #FFF 3px solid;
     }
 
     nav:hover {
@@ -94,13 +94,13 @@ div.d-flex {
 }
 /* Footer Links styling */
 footer a, p > a {
-    color: white;
-    border-bottom: 2px solid white;
+    color: #FFF;
+    border-bottom: 2px solid #FFF;
 }
 
 footer a:hover, p > a:hover {
     color:black;
-    background-color: white;
+    background-color: #FFF;
     transition: 0.2s;
     text-decoration: none;
 }
@@ -132,11 +132,6 @@ section#download div.col-4 {
     outline: none!important;
 }
 
-/* Navbar Expand Button */
-button.navbar-toggler {
-    outline: none;
-}
-
 /* Game Logo */
 .GameLogoBig {
     width: 75%;
@@ -146,4 +141,17 @@ button.navbar-toggler {
 .GameLogoSmall {
     width: 75%;
     height: 75%;
+}
+
+/* Custom Scrollbar */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #000;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #FFF;
 }
